--- a/JS_Projects/project4_random_password_generator/index.html
+++ b/JS_Projects/project4_random_password_generator/index.html
@@ -12,10 +12,10 @@
     <h1>Generate a <br><span>Random Password</span> </h1>
     <div class="display">
         <input type="text" name="Password" id="Password" placeholder="Password">
-        <img onclick="copyPassword()" src="/copy.png" alt="copy">
+        <img onclick="copyPassword()" src="/JS_Projects/project4_random_password_generator/copy.png" alt="copy">
     </div>
-    <button onclick="createPassword()"> <img src="/generate.png" alt="Generate" >Generate Password</button>
+        <button onclick="createPassword()"> <img src="/JS_Projects/project4_random_password_generator/generate.png" alt="Generate" >Generate Password</button>
    </div>
-    <script src="/script.js"></script>
+    <script src="/JS_Projects/project4_random_password_generator/script.js"></script>
 </body>
 </html>
