HTML: Notes App

--- a/JS_Projects/Project6_Notes_app/index.html
+++ b/JS_Projects/Project6_Notes_app/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="container">
-        <h1><img src="/images/notes.png" alt="notesimg">Notes</h1>
-        <button class="btn"> <img src="/images/edit.png" alt="">Create Notes</button>
+        <h1><img src="/JS_Projects/Project6_Notes_app/images/notes.png" alt="notesimg">Notes</h1>
+        <button class="btn"> <img src="/JS_Projects/Project6_Notes_app/images/edit.png" alt="">Create Notes</button>
 
         <div class="notes-container">
             <!-- <p contenteditable="true" class="input-box">
