--- a/facebook_clone_project/public/index.html
+++ b/facebook_clone_project/public/index.html
@@ -32,6 +32,32 @@
         </div>
     </nav>
     <!-- Navbar End  -->
+
+    <div class="container">
+        <!-- Left Sidebar -->
+        <div class="leftsidebar">
+            <div class="imp-links">
+                <a href=""><img src="/facebook_clone_project/images/news.png" alt="">Latest News </a>
+                <a href=""><img src="/facebook_clone_project/images/friends.png" alt="">Friends </a>
+                <a href=""><img src="/facebook_clone_project/images/group.png" alt="">Group </a>
+                <a href=""><img src="/facebook_clone_project/images/marketplace.png" alt="">Marketplace </a>
+                <a href=""><img src="/facebook_clone_project/images/watch.png" alt="">Watch </a>
+                <a href="#">See More</a>
+            </div>
+
+            <div class="shortcut-links">
+                <p>Your Shortcuts</p>
+                <a href="#"><img src="/facebook_clone_project/images/shortcut-1.png" alt="">Web Developers</a>
+                <a href="#"><img src="/facebook_clone_project/images/shortcut-2.png" alt="">Web Designer</a>
+                <a href="#"><img src="/facebook_clone_project/images/shortcut-3.png" alt="">Full Stack Develloper</a>
+                <a href="#"><img src="/facebook_clone_project/images/shortcut-4.png" alt="">Website Explorer</a>
+            </div>
+        </div>
+        <!-- Main Content -->
+        <div class="main-content"></div>
+        <!-- Right Sidebar -->
+        <div class="rightsidebar"></div>
+    </div>
      
    
 
