right sidebar of the facebook website

--- a/facebook_clone_project/public/index.html
+++ b/facebook_clone_project/public/index.html
@@ -1,66 +1,187 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Facebook - Yatendra Yadav</title>
     <!-- Css file link -->
-    <link rel="stylesheet" href="/facebook_clone_project/public/style.css">
+    <link rel="stylesheet" href="/facebook_clone_project/public/style.css" />
     <!-- font awesome scripting link for the icons  -->
-    <script src="https://kit.fontawesome.com/f0c52e6884.js" crossorigin="anonymous"></script>
-</head>
-<body>
+    <script
+      src="https://kit.fontawesome.com/f0c52e6884.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
     <!-- Navbar Start -->
-    <nav >
-        <div class="nav-left">
-            <img src="/facebook_clone_project/images/logo.png" class="logo" alt="">
-            <ul>
-                <li><img src="/facebook_clone_project/images/notification.png" alt="notificationimg"></li>
-                <li><img src="/facebook_clone_project/images/inbox.png" alt="inboximg"></li>
-                <li><img src="/facebook_clone_project/images/video.png" alt="videoimg"></li>
-                
-            </ul>
+    <nav>
+      <div class="nav-left">
+        <img
+          src="/facebook_clone_project/images/logo.png"
+          class="logo"
+          alt=""
+        />
+        <ul>
+          <li>
+            <img
+              src="/facebook_clone_project/images/notification.png"
+              alt="notificationimg"
+            />
+          </li>
+          <li>
+            <img
+              src="/facebook_clone_project/images/inbox.png"
+              alt="inboximg"
+            />
+          </li>
+          <li>
+            <img
+              src="/facebook_clone_project/images/video.png"
+              alt="videoimg"
+            />
+          </li>
+        </ul>
+      </div>
+      <div class="nav-right">
+        <div class="search-box">
+          <img src="/facebook_clone_project/images/search.png" alt="" />
+          <input type="search" name="search" id="search" placeholder="Search" />
         </div>
-        <div class="nav-right">
-            <div class="search-box">
-                <img src="/facebook_clone_project/images/search.png" alt="">
-                <input type="search" name="search" id="search" placeholder="Search">
-            </div>
-            <div class="nav-user-icon online">
-                <img src="/facebook_clone_project/images/profile-pic.png" alt="profilepic">
-            </div>
+        <div class="nav-user-icon online">
+          <img
+            src="/facebook_clone_project/images/profile-pic.png"
+            alt="profilepic"
+          />
         </div>
+      </div>
     </nav>
     <!-- Navbar End  -->
 
     <div class="container">
-        <!-- Left Sidebar -->
-        <div class="leftsidebar">
-            <div class="imp-links">
-                <a href=""><img src="/facebook_clone_project/images/news.png" alt="">Latest News </a>
-                <a href=""><img src="/facebook_clone_project/images/friends.png" alt="">Friends </a>
-                <a href=""><img src="/facebook_clone_project/images/group.png" alt="">Group </a>
-                <a href=""><img src="/facebook_clone_project/images/marketplace.png" alt="">Marketplace </a>
-                <a href=""><img src="/facebook_clone_project/images/watch.png" alt="">Watch </a>
-                <a href="#">See More</a>
-            </div>
-
-            <div class="shortcut-links">
-                <p>Your Shortcuts</p>
-                <a href="#"><img src="/facebook_clone_project/images/shortcut-1.png" alt="">Web Developers</a>
-                <a href="#"><img src="/facebook_clone_project/images/shortcut-2.png" alt="">Web Designer</a>
-                <a href="#"><img src="/facebook_clone_project/images/shortcut-3.png" alt="">Full Stack Develloper</a>
-                <a href="#"><img src="/facebook_clone_project/images/shortcut-4.png" alt="">Website Explorer</a>
-            </div>
+      <!-- Left Sidebar -->
+      <div class="leftsidebar">
+        <div class="imp-links">
+          <a href=""
+            ><img src="/facebook_clone_project/images/news.png" alt="" />Latest
+            News
+          </a>
+          <a href=""
+            ><img
+              src="/facebook_clone_project/images/friends.png"
+              alt=""
+            />Friends
+          </a>
+          <a href=""
+            ><img src="/facebook_clone_project/images/group.png" alt="" />Group
+          </a>
+          <a href=""
+            ><img
+              src="/facebook_clone_project/images/marketplace.png"
+              alt=""
+            />Marketplace
+          </a>
+          <a href=""
+            ><img src="/facebook_clone_project/images/watch.png" alt="" />Watch
+          </a>
+          <a href="#">See More</a>
         </div>
-        <!-- Main Content -->
-        <div class="main-content"></div>
-        <!-- Right Sidebar -->
-        <div class="rightsidebar"></div>
+
+        <div class="shortcut-links">
+          <p>Your Shortcuts</p>
+          <a href="#"
+            ><img
+              src="/facebook_clone_project/images/shortcut-1.png"
+              alt=""
+            />Web Developers</a
+          >
+          <a href="#"
+            ><img
+              src="/facebook_clone_project/images/shortcut-2.png"
+              alt=""
+            />Web Designer</a
+          >
+          <a href="#"
+            ><img
+              src="/facebook_clone_project/images/shortcut-3.png"
+              alt=""
+            />Full Stack Develloper</a
+          >
+          <a href="#"
+            ><img
+              src="/facebook_clone_project/images/shortcut-4.png"
+              alt=""
+            />Website Explorer</a
+          >
+        </div>
+      </div>
+      <!-- Main Content -->
+      <div class="main-content"></div>
+      <!-- Right Sidebar -->
+      <div class="rightsidebar">
+        <div class="sidebar-title">
+          <h4>Events</h4>
+          <a href="#">See All</a>
+        </div>
+
+        <div class="event">
+          <div class="left-event">
+            <h3>18</h3>
+            <span>March</span>
+          </div>
+          <div class="right-event">
+            <h4>Social Media</h4>
+            <p><i class="fa-solid fa-location-dot"></i>Delhi Tech Park</p>
+            <a href="#">More Info</a>
+          </div>
+        </div>
+        <div class="event">
+          <div class="left-event">
+            <h3>22</h3>
+            <span>June</span>
+          </div>
+          <div class="right-event">
+            <h4>Mobile Marketing</h4>
+            <p><i class="fa-solid fa-location-dot"></i>Dubai Tech.</p>
+            <a href="#">More Info</a>
+          </div>
+        </div>
+
+        <div class="sidebar-title">
+          <h4>Advertisements</h4>
+          <a href="#">Close</a>
+        </div>
+        <img
+          src="/facebook_clone_project/images/advertisement.png"
+          alt="advertisementimg "
+          class="sidebar-ads"
+        />
+
+        <div class="sidebar-title">
+          <h4>Messenger</h4>
+          <a href="#">Hide Chat</a>
+        </div>
+
+        <div class="online-list">
+          <div class="online">
+            <img src="/facebook_clone_project/images/member-1.png" alt="member1img">
+          </div>
+          <p>Sapna Yadav</p>
+        </div>
+        <div class="online-list">
+          <div class="online">
+            <img src="/facebook_clone_project/images/member-2.png" alt="member1img">
+          </div>
+          <p>Neeraj Kumar</p>
+        </div>
+        <div class="online-list">
+          <div class="online">
+            <img src="/facebook_clone_project/images/member-3.png" alt="member1img">
+          </div>
+          <p>Siya Yadav</p>
+        </div>
+      </div>
     </div>
-     
-   
 
     <script src="/facebook_clone_project/public/script.js"></script>
-</body>
+  </body>
 </html>
