main content story section

--- a/facebook_clone_project/public/index.html
+++ b/facebook_clone_project/public/index.html
@@ -114,9 +114,35 @@
           >
         </div>
       </div>
+      <!-- Left sidebar end -->
       <!-- Main Content -->
-      <div class="main-content"></div>
+      <div class="maincontent">
+        <div class="story-gallery">
+            <div class="story story1">
+                <img src="/facebook_clone_project/images/upload.png" alt="">
+                <p>Post Story</p>
+            </div>
+            <div class="story story2">
+                <img src="/facebook_clone_project/images/member-2.png" alt="">
+                <p>Yatendra</p>
+            </div>
+            <div class="story story3">
+                <img src="/facebook_clone_project/images/member-3.png" alt="">
+                <p>Siya</p>
+            </div>
+            <div class="story story4">
+                <img src="/facebook_clone_project/images/member-4.png" alt="">
+                <p>Rishi </p>
+            </div>
+            <div class="story story5">
+                <img src="/facebook_clone_project/images/member-5.png" alt="">
+                <p>Deepak</p>
+            </div>
+        </div>
+      </div>
+      <!-- Main content End -->
       <!-- Right Sidebar -->
+      
       <div class="rightsidebar">
         <div class="sidebar-title">
           <h4>Events</h4>
@@ -180,6 +206,8 @@
           <p>Siya Yadav</p>
         </div>
       </div>
+
+      <!-- Right sidebar End -->
     </div>
 
     <script src="/facebook_clone_project/public/script.js"></script>
