--- a/facebook_clone_project/public/index.html
+++ b/facebook_clone_project/public/index.html
@@ -47,13 +47,58 @@
           <img src="/facebook_clone_project/images/search.png" alt="" />
           <input type="search" name="search" id="search" placeholder="Search" />
         </div>
-        <div class="nav-user-icon online">
+        <div class="nav-user-icon online" onclick="settingsMenuToggle()">
           <img
             src="/facebook_clone_project/images/profile-pic.png"
             alt="profilepic"
           />
         </div>
       </div>
+<!-- Setting Menu -->
+      <div class="settings-menu">
+        <div class="settings-menu-inner">
+          <div class="user-profile">
+            <img
+              src="/facebook_clone_project/images/profile-pic.png"
+              alt="profilepic"
+            />
+            <div>
+              <p>Yatendra Singh</p>
+              <a href="#">See Your Profile</a>
+            </div>
+          </div>
+          <hr>
+          <div class="user-profile">
+            <img
+              src="/facebook_clone_project/images/feedback.png"
+              alt="profilepic"
+            />
+            <div>
+              <p>Give Feedback</p>
+              <a href="#">Help us to improve</a>
+            </div>
+          </div>
+          <hr>
+          <div class="setting-links">
+            <img  class="settings-icon" src="/facebook_clone_project/images/setting.png" alt="setting">
+            <a href="#">Settings & Privacy</a> <img src="/facebook_clone_project/images/arrow.png" alt="">
+          </div>
+          <div class="setting-links">
+            <img  class="settings-icon" src="/facebook_clone_project/images/help.png" alt="setting">
+            <a href="#">Help & Support</a> <img src="/facebook_clone_project/images/arrow.png" alt="">
+          </div>
+          <div class="setting-links">
+            <img  class="settings-icon" src="/facebook_clone_project/images/display.png" alt="setting">
+            <a href="#">Display & Accessibility</a> <img src="/facebook_clone_project/images/arrow.png" alt="">
+          </div>
+          <div class="setting-links">
+            <img  class="settings-icon" src="/facebook_clone_project/images/logout.png" alt="setting">
+            <a href="#">Logout</a> <img src="/facebook_clone_project/images/arrow.png" alt="">
+          </div>
+      </div>
+
+      </div>
+
     </nav>
     <!-- Navbar End  -->
 
