dark mode and light mode switching

--- a/facebook_clone_project/public/index.html
+++ b/facebook_clone_project/public/index.html
@@ -56,6 +56,11 @@
       </div>
 <!-- Setting Menu -->
       <div class="settings-menu">
+        <!-- Dark mode light mode switch button  -->
+        <div id="dark-btn">
+       <span> </span>
+        </div>
+
         <div class="settings-menu-inner">
           <div class="user-profile">
             <img
