interlinking the profile page with the home page

--- a/facebook_clone_project/public/profile.html
+++ b/facebook_clone_project/public/profile.html
@@ -16,11 +16,7 @@
     <!-- Navbar Start -->
     <nav>
       <div class="nav-left">
-        <img
-          src="/facebook_clone_project/images/logo.png"
-          class="logo"
-          alt=""
-        />
+        <a href="/facebook_clone_project/public/index.html"> <img src="/facebook_clone_project/images/logo.png"class="logo" alt=""/></a>
         <ul>
           <li>
             <img
@@ -69,7 +65,7 @@
             />
             <div>
               <p>Yatendra Singh</p>
-              <a href="#">See Your Profile</a>
+              <a href="/facebook_clone_project/public/profile.html">See Your Profile</a>
             </div>
           </div>
           <hr />
@@ -109,7 +105,7 @@
               alt="setting"
             />
             <a href="#">Display & Accessibility</a>
-            <img src="/facebook_clone_project/images/arrow.png" alt="" />
+            <img src="/facebook_clone_project/images/arrow.png" alt="arrowimg" />
           </div>
           <div class="setting-links">
             <img
@@ -118,7 +114,7 @@
               alt="setting"
             />
             <a href="#">Logout</a>
-            <img src="/facebook_clone_project/images/arrow.png" alt="" />
+            <img src="/facebook_clone_project/images/arrow.png" alt="arrowimg" />
           </div>
         </div>
       </div>
@@ -173,10 +169,10 @@
   <p class="intro-text">Belief in yourself and your abilities to succeed is key. <img src="/facebook_clone_project/images/feeling.png" alt="" width="15px" style="margin-bottom: -3px;"> </p>
   <hr>
   <ul>
-    <li> <img src="/facebook_clone_project/images/profile-job.png" alt="">Director at Hindustan Times</li>
-    <li> <img src="/facebook_clone_project/images/profile-study.png" alt="">Studied at IIT Bombay</li>
-    <li><img src="/facebook_clone_project/images/profile-home.png" alt="">Live in Agra</li>
-    <li><img src="/facebook_clone_project/images/profile-location.png" alt="">Saraswati Nagar Tajganj , Agra</li>
+    <li> <img src="/facebook_clone_project/images/profile-job.png" alt="jobprofile img">Director at Hindustan Times</li>
+    <li> <img src="/facebook_clone_project/images/profile-study.png" alt="profile-studyimg">Studied at IIT Bombay</li>
+    <li><img src="/facebook_clone_project/images/profile-home.png" alt="profile-homeimg">Live in Agra</li>
+    <li><img src="/facebook_clone_project/images/profile-location.png" alt="profile-locationimg">Saraswati Nagar Tajganj , Agra</li>
     </ul>
 </div>
 
@@ -204,15 +200,15 @@
   </div>
   <p>120 Friends(20 Mutual) </p>
   <div class="friends-box">
-      <div><img src="/facebook_clone_project/images/member-1.png" alt=""><p>Siya Yadav</p></div>
-      <div><img src="/facebook_clone_project/images/member-2.png" alt=""><p>Neerak Kumar</p></div>
-     <div><img src="/facebook_clone_project/images/member-3.png" alt=""><p>Sapna Yadav</p></div> 
-      <div><img src="/facebook_clone_project/images/member-4.png" alt=""><p>Yatendra Singh</p></div>
-      <div><img src="/facebook_clone_project/images/member-5.png" alt=""><p>Ravi Yadav</p></div>
-     <div> <img src="/facebook_clone_project/images/member-6.png" alt=""><p>Simran Singh</p></div>
-     <div> <img src="/facebook_clone_project/images/member-7.png" alt=""><p>Rohit Singh</p></div>
-     <div> <img src="/facebook_clone_project/images/member-8.png" alt=""><p>Neetu Singh</p></div>
-     <div> <img src="/facebook_clone_project/images/member-9.png" alt=""><p>Mohit Kumar</p></div>
+      <div><img src="/facebook_clone_project/images/member-1.png" alt="siyaimg"><p>Siya Yadav</p></div>
+      <div><img src="/facebook_clone_project/images/member-2.png" alt="neeraj.jpg"><p>Neerak Kumar</p></div>
+     <div><img src="/facebook_clone_project/images/member-3.png" alt="Sapna.png"><p>Sapna Yadav</p></div> 
+    <div><img src="/facebook_clone_project/images/member-4.png" alt="yatendra.png"><p>Yatendra Singh</p></div>
+      <div><img src="/facebook_clone_project/images/member-5.png" alt="ravi.png"><p>Ravi Yadav</p></div>
+     <div> <img src="/facebook_clone_project/images/member-6.png" alt="simran.png"><p>Simran Singh</p></div>
+     <div> <img src="/facebook_clone_project/images/member-7.png" alt="rohit.png"><p>Rohit Singh</p></div>
+     <div> <img src="/facebook_clone_project/images/member-8.png" alt="neetu.png"><p>Neetu Singh</p></div>
+     <div> <img src="/facebook_clone_project/images/member-9.png" alt="mohit.png"><p>Mohit Kumar</p></div>
     
   </div>
 </div>
