update linking of profile page with the home page

--- a/facebook_clone_project/public/index.html
+++ b/facebook_clone_project/public/index.html
@@ -16,11 +16,8 @@
     <!-- Navbar Start -->
     <nav>
       <div class="nav-left">
-        <img
-          src="/facebook_clone_project/images/logo.png"
-          class="logo"
-          alt=""
-        />
+       <a href="/facebook_clone_project/public/index.html"> <img src="/facebook_clone_project/images/logo.png"class="logo" alt=""/></a>
+       
         <ul>
           <li>
             <img
@@ -69,7 +66,7 @@
             />
             <div>
               <p>Yatendra Singh</p>
-              <a href="#">See Your Profile</a>
+              <a href="/facebook_clone_project/public/profile.html">See Your Profile</a>
             </div>
           </div>
           <hr>
