see more feature adding with the js and css

--- a/facebook_clone_project/public/index.html
+++ b/facebook_clone_project/public/index.html
@@ -130,7 +130,16 @@
           <a href=""
             ><img src="/facebook_clone_project/images/watch.png" alt="" />Watch
           </a>
-          <a href="#">See More</a>
+
+          <div id="additional-content" >
+            <a href=""><img src="/facebook_clone_project/images/group.png" alt="" />Group
+          </a>
+          <a href="" ><img src="/facebook_clone_project/images/marketplace.png" alt="" />Marketplace
+          </a>
+          <a href=""><img src="/facebook_clone_project/images/watch.png" alt="" />Watch</a>
+          </div>
+          <a href="#" id="see-more-link" onclick="seeMore()">See More</a>
+
         </div>
 
         <div class="shortcut-links">
