adding icons to the see more options

--- a/facebook_clone_project/public/index.html
+++ b/facebook_clone_project/public/index.html
@@ -132,11 +132,11 @@
           </a>
 
           <div id="additional-content" >
-            <a href=""><img src="/facebook_clone_project/images/group.png" alt="" />Group
-          </a>
-          <a href="" ><img src="/facebook_clone_project/images/marketplace.png" alt="" />Marketplace
-          </a>
-          <a href=""><img src="/facebook_clone_project/images/watch.png" alt="" />Watch</a>
+          <a href=""><i class="fa-solid fa-audio-description"></i>Ads Manager </a>
+          <a href="" ><i class="fa-solid fa-syringe"></i> Blood Donation</a>
+          <a href=""><i class="fa-solid fa-calendar-day"></i>Events </a>
+          <a href=""><i class="fa-solid fa-gamepad"></i>Gaming video</a>
+          <a href=""><i class="fa-brands fa-facebook-messenger"></i>Messenger</a>
           </div>
           <a href="#" id="see-more-link" onclick="seeMore()">See More</a>
 
@@ -169,6 +169,7 @@
             />Website Explorer</a
           >
         </div>
+
       </div>
       <!-- Left sidebar end -->
       <!-- Main Content -->
